# red-rover

./: .gitignore  .gitmodules  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/pid/: PidConfig.h
devel/share/libphidget21/cmake/: libphidget21Config.cmake
devel/share/phidgets_api/cmake/: phidgets_apiConfig.cmake
devel/share/phidgets_imu/cmake/: phidgets_imuConfig.cmake
devel/share/pid/cmake/: pidConfig-version.cmake  pidConfig.cmake
devel/share/red-rover-core/cmake/: red-rover-coreConfig.cmake
devel/share/red-rover-driver/cmake/: red-rover-driverConfig.cmake
devel/share/sensor_fusion/cmake/: sensor_fusionConfig.cmake
src/red-rover-core/: package.xml
