<?xml version="1.0"?>
<package>
  <name>red-rover-core</name>
  <version>0.0.0</version>
  <description>The red-rover-core package</description>
  <maintainer email="brad@todo.todo">brad</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
